# emu-ex-plus-alpha

./: README.md
2600.emu/: CMakeLists.txt  build.mk  linux.mk
2600.emu/src/: CMakeLists.txt  EventHandlerEmuEx.hxx  FSNode.hxx  FrameBufferEmuEx.hxx  Logger.hxx  MediaFactory.hxx  OSystemEmuEx.hxx  SoundEmuEx.hh  StaggeredLogger.hxx
2600.emu/src/main/: AppMeta.cc  EmuMenuViews.cc  FSNodeEmuEx.cc  FrameBuffer.cc  Main.cc  MainSystem.hh  OSystem.cc  SoundEmuEx.cc  input.cc  options.cc  system.ccm
C64.emu/: CMakeLists.txt  CMakePresets.json  build.mk
C64.emu/src/: CMakeLists.txt
C64.emu/src/config/: archdep.h  infocontrib.h  ui.h  vice-config.h  viceCommonAPI.h
C64.emu/src/main/: AppMeta.cc  EmuMenuViews.cc  Main.cc  MainSystem.hh  VicePlugin.cc  VicePlugin.hh  androidCompat.c  input.cc  log.cc  options.cc  plugin.ccm  pluginCommon.c  pluginCxxSupport.cc  resources.cc  scpu64Stubs.c  sound.cc  sysfile.cc  system.ccm  video.cc  zfile.cc
C64.emu/src/vice/: 6510core.c  console.h  init.c  interrupt.c  interrupt.h  keyboard.c  log.h  network.c  snapshot.c  sound.c  sound.h  types.h  version.h  vice.h  vsync.c
EmuFramework/: CMakeLists.txt  android.sh  emuFrameworkUtils.cmake
EmuFramework/doc/: INSTALL
EmuFramework/include/emuframework/: AppKeyCode.hh  AppMeta.hh  AssetManager.hh  AudioOptionView.hh  AutosaveManager.hh  BundledGamesView.hh  ButtonConfigView.hh  Cheats.hh  CreditsView.hh  DataPathSelectView.hh  EmuApp.hh  EmuAppHelper.hh  EmuAppInlines.hh  EmuAudio.hh  EmuInput.hh  EmuInputView.hh  EmuOptions.hh  EmuSystem.hh  EmuSystemInlines.hh  EmuSystemTask.hh  EmuSystemTaskContext.hh  EmuTiming.hh  EmuVideo.hh  EmuVideoLayer.hh  EmuView.hh  EmuViewController.hh  FilePathOptionView.hh  FilePicker.hh  GUIOptionView.hh  InputManager.hh  LoadProgressView.hh  MainMenuView.hh  Option.hh  OutSizeTracker.hh  OutputTimingManager.hh  RecentContent.hh  RewindManager.hh  StateSlotView.hh  SystemActionsView.hh  SystemOptionView.hh  (+14 more)
EmuFramework/make/: mednafenCommon.mk
EmuFramework/metadata/: conf.mk
EmuFramework/src/: AppMeta.cc  AssetManager.cc  AutosaveManager.cc  CMakeLists.txt  ConfigFile.cc  EmuApp.cc  EmuAudio.cc  EmuInput.cc  EmuOptions.cc  EmuSystem.cc  EmuSystemTask.cc  EmuTiming.cc  EmuVideo.cc  EmuVideoLayer.cc  InputDeviceConfig.cc  InputDeviceConfig.hh  InputDeviceData.cc  InputDeviceData.hh  KeyConfig.cc  OutputTimingManager.cc  RecentContent.cc  RewindManager.cc  ToggleInput.cc  TurboInput.cc  VideoImageEffect.cc  VideoImageOverlay.cc  WindowData.hh  configFile.ccm  emuex.ccm  pathUtils.cc  pathUtils.ccm
EmuFramework/src/gui/: AudioOptionView.cc  AutosaveSlotView.cc  AutosaveSlotView.hh  BundledGamesView.cc  ButtonConfigView.cc  CPUAffinityView.cc  CPUAffinityView.hh  CreditsView.cc  EmuInputView.cc  EmuView.cc  EmuViewController.cc  FilePathOptionView.cc  FilePicker.cc  FrameTimingView.cc  FrameTimingView.hh  GUIOptionView.cc  InputManagerView.cc  InputManagerView.hh  InputOverridesView.cc  InputOverridesView.hh  LoadProgressView.cc  MainMenuView.cc  PlaceVControlsView.cc  PlaceVControlsView.hh  PlaceVideoView.cc  PlaceVideoView.hh  ProfileSelectView.hh  RecentContentView.cc  RecentContentView.hh  ResetAlertView.hh  StateSlotView.cc  SystemActionsView.cc  SystemOptionView.cc  TouchConfigView.cc  VideoOptionView.cc
EmuFramework/src/shared/: CMakeLists.txt
EmuFramework/src/vcontrols/: VController.cc  VControllerButton.cc  VControllerButtonGroup.cc  VControllerDPad.cc  VControllerKeyboard.cc
GBA.emu/: CMakeLists.txt
GBA.emu/metadata/: conf.mk
GBA.emu/src/: CMakeLists.txt
GBA.emu/src/main/: AppMeta.cc  Cheats.cc  EmuMenuViews.cc  GBASys.hh  Main.cc  MainSystem.hh  VbamApi.cc  input.cc  options.cc  system.ccm
GBC.emu/: CMakeLists.txt
GBC.emu/src/: CMakeLists.txt
GBC.emu/src/main/: AppMeta.cc  Cheats.cc  EmuMenuViews.cc  Main.cc  MainSystem.hh  Palette.cc  input.cc  options.cc  system.ccm
Lynx.emu/: CMakeLists.txt  build.mk
Lynx.emu/src/: CMakeLists.txt
Lynx.emu/src/main/: AppMeta.cc  EmuMenuViews.cc  Main.cc  MainSystem.hh  input.cc  options.cc  system.ccm
MD.emu/: CMakeLists.txt  build.mk
MD.emu/src/: CMakeLists.txt
MD.emu/src/genplus-gx/: loadrom.cc  mem68k.cc  membnk.cc  state.cc  system.cc  system.h  vdp_ctrl.cc  vdp_render.cc
MD.emu/src/main/: AppMeta.cc  Cheats.cc  Cheats.hh  EmuMenuViews.cc  Main.cc  MainSystem.hh  input.cc  options.cc  system.ccm
MD.emu/src/scd/: LC89510.cc  cd_file.cc  cd_sys.cc  gfx_cd.cc  memMain.cc  memSub.cc  pcm.cc  scd.cc
MSX.emu/: CMakeLists.txt
MSX.emu/src/: CMakeLists.txt
MSX.emu/src/main/: AppMeta.cc  BlueMSXApi.cc  Board.cc  Main.cc  (+9 more)
NEO.emu/: CMakeLists.txt
NEO.emu/src/: CMakeLists.txt
NES.emu/: CMakeLists.txt
NES.emu/src/: CMakeLists.txt
NGP.emu/: CMakeLists.txt  build.mk
NGP.emu/src/: CMakeLists.txt
PCE.emu/: CMakeLists.txt  build.mk  emuFrameworkUtils.cmake
PCE.emu/metadata/: conf.mk
PCE.emu/src/: CMakeLists.txt
Saturn.emu/: CMakeLists.txt  build.mk  config.mk
Saturn.emu/src/: CMakeLists.txt
Snes9x/: CMakeLists.txt
Snes9x/1.43/: CMakeLists.txt  CMakePresets.json  linux.mk
Snes9x/src/: CMakeLists.txt
Swan.emu/: CMakeLists.txt  build.mk
Swan.emu/src/: CMakeLists.txt
imagine/: CMakeLists.txt  CMakePresets.json  android.sh  build.mk
imagine/cmake/: android-arm64.cmake  android-armv7.cmake  android-config.cmake  android-x86.cmake  android-x86_64.cmake  android.cmake  clang.cmake  compiler-common.cmake  config.cmake  gcc.cmake  ios-arm64.cmake  ios-armv7.cmake  ios.cmake  linux-armv7-pandora.cmake  linux-x86.cmake  linux-x86_64.cmake  linux.cmake  pkgconfig.pc.in
imagine/doc/: INSTALL  INSTALL-Android  INSTALL-iOS
imagine/make/: android-arm64.mk  android-armv7-gcc.mk  android-metadata.mk  config.mk  gcc-common.mk  gcc-link.mk  linux-armv7-pandora-gcc.mk  linux-gcc.mk  linux-x86-gcc.mk  linux-x86_64-gcc.mk  win32.mk  writeConfig.sh
imagine/src/: CMakeLists.txt  glm.ccm  imagine.audio.ccm  imagine.bluetooth.ccm  imagine.ccm  imagine.data.ccm  imagine.gfx.ccm  imagine.gui.ccm
imagine/tools/: androidFuncs.sh  clang-scan-deps-apple.sh  genAndroidMeta.sh
(+591 files in other folders)
