if(ENV STREQUAL linux)
	if(NOT SUBENV STREQUAL pandora)
		add_subdirectory(pulseaudio)
		add_subdirectory(alsa)
	else()
		add_subdirectory(alsa)
	endif()
	set(audioManager Basic)
elseif(ENV STREQUAL android)
	add_subdirectory(opensl)
	add_subdirectory(android)
elseif(ENV STREQUAL ios)
	add_subdirectory(coreaudio)
elseif(ENV STREQUAL macosx)
	add_subdirectory(coreaudio)
	set(audioManager Basic)
endif()

if(audioManager STREQUAL Basic)
	target_sources(imagine PRIVATE BasicManager.cc)
endif()

target_sources(imagine PRIVATE Format.cc OutputStream.cc)
